force-app/main/default/objects/ampi__xx_Position__c/ampi__xx_Position__c.object-meta.xml
<CustomObject>
    <description>Track the positions available (or required) for different roles to successfully implement your project(s)</description>
    <label>Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>