force-app/main/default/objects/ampi__xx_Position__c/fields/ampi__xx_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to capture the business unit associated with a position</description>
    <inlineHelpText>Only Accounts with Type as &apos;Business Unit&apos; can be saved here</inlineHelpText>
    <label>Business Unit</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions1</relationshipName>
    <type>Lookup</type>
</CustomField>