force-app/main/default/objects/ampi__xx_Position__c/fields/ampi__xx_Contact__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship field to link the contact of recruited individual with the position</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions1</relationshipName>
    <type>Lookup</type>
</CustomField>