force-app/main/default/objects/ampi__xx_Position__c/fields/ampi__xx_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_End_Date__c</fullName>
    <description>Date field to specify and track the end date of a position</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>