force-app/main/default/objects/ampi__xx_Position__c/fields/ampi__xx_Location__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Location__c</fullName>
    <description>Text field to specify the location for the position</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>