force-app/main/default/objects/ampi__xx_Position__c/fields/ampi__xx_Required_Qualifications__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Required_Qualifications__c</fullName>
    <description>Text field to indicate qualifications such as credentials, licenses, and skills required for the job</description>
    <label>Required Qualifications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>