force-app/main/default/objects/ampi__xx_Position__c/fields/ampi__xx_Role__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify the Role that the Position relates to</description>
    <label>Role</label>
    <referenceTo>ampi__xx_Role__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>