force-app/main/default/objects/ampi__xx_Position__c/fields/ampi__xx_Time_Unit_For_Costing__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Time_Unit_For_Costing__c</fullName>
    <description>Picklist field to choose from Day, Hour or Year to specify the time unit for calculating costs</description>
    <inlineHelpText>The default value for Time Unit for Costing is same as the Default Time Unit for Costing of related Role field</inlineHelpText>
    <label>Time Unit for Costing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>