force-app/main/default/objects/ampi__xx_Position__c/fields/ampi__xx_Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Total_Capacity__c</fullName>
    <description>Percent field to indicate the total level of effort required from the position</description>
    <inlineHelpText>The Total Capacity cannot exceed 100%</inlineHelpText>
    <label>Total Capacity (LOE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>