force-app/main/default/objects/ampi__xx_Position__c/fields/ampi__xx_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Unit_Cost__c</fullName>
    <description>Currency field to capture the cost per unit time for the position</description>
    <inlineHelpText>The default value for Unit Cost is same as the Default Unit Cost of related Role field</inlineHelpText>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>