force-app/main/default/objects/ampi__xx_Position__c/fields/ampi__xx_Vacancy_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Vacancy_Status__c</fullName>
    <description>Picklist field to set the vacancy status of a position</description>
    <inlineHelpText>By default, the status is &apos;Vacant&apos;</inlineHelpText>
    <label>Vacancy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
                <default>true</default>
                <label>Vacant</label>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Filled</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>