force-app/main/default/objects/ampi__xx_Position__c/validationRules/ampi__Total_Capacity_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>ampi__Total_Capacity_Limit</fullName>
    <active>true</active>
    <description>This Validation Rule verifies that the value saved in ampi__xx_Total_Capacity__c does not exceed 100%</description>
    <errorConditionFormula>ampi__xx_Total_Capacity__c  &gt; 1</errorConditionFormula>
    <errorDisplayField>ampi__xx_Total_Capacity__c</errorDisplayField>
    <errorMessage>The Total Capacity cannot exceed 100%</errorMessage>
</ValidationRule>